tetrapak-publicweb/ui.dev/src/source/templates/components/textImage/_textImage.scss
.pw-text-image {
    @include border-radius($border-radius);
    @include padding($padding-md);
    @include margin(0 $margin-md);
    @media #{$desktop} {
        @include padding($padding-xxxl);
        @include margin(0 $margin-xxxl);
    }


    &--display-row {
        > .row {
            flex-direction: row;
        }
        .leftPad {
            @include padding-left($padding-md);
            @include padding-right($padding-md);
            @media #{$desktop} {
                @include padding-left($padding-md);
                @include padding-right($padding-l);
            }
        }
        .rightPad {
            @include padding-left($padding-md);
            @include padding-right($padding-md);
            @media #{$desktop} {
                @include padding-right($padding-md);
                @include padding-left($padding-l);
            }
        }
    }

    &--display-row-reversed {
        > .row {
            flex-direction: row-reverse;
        }
        .rightPad {
            @include padding-left($padding-md);
            @include padding-right($padding-md);
            @media #{$desktop} {
                @include padding-left($padding-md);
                @include padding-right($padding-l);
            }
        }
        .leftPad {
            @include padding-left($padding-md);
            @include padding-right($padding-md);
            @media #{$desktop} {
                @include padding-right($padding-md);
                @include padding-left($padding-l);
            }
        }
    }


    &__innerpadding {
        @include margin-top($margin-l);
        @include margin-bottom($margin-l);

        @media #{$desktop} {
            @include margin-top(0);
            @include margin-bottom(0);
        }
    }

    &__subTitle {
        @include margin-top($margin-md);
        @include margin-bottom($margin-xss);
        color: $color-boulder;
        text-transform: $uppercase;
        @media #{$desktop} {
            @include margin-top($margin-zero);
            @include margin-bottom($margin-xs);
            text-transform: $uppercase;
        }
    }

    &__title,
    &__description {
        @include margin-bottom($padding-md);

        @media #{$desktop} {
            @include margin-bottom($padding-l);
        }
    }

    &__description {
        @include font-size(16px);
        @include line-height(28px, 16px);
        @media #{$tablet} {
            @include font-size(14px);
            @include line-height(24px, 14px);
        }
    }

    &__link {
        @include margin-bottom($padding-md);
        @include padding($padding-zero);
        background-color: none;

        @media #{$desktop} {
            @include margin-bottom($margin-zero);
            @include padding($padding-zero);
            @include line-height(24px, 14px);
            background-color: none;
        }
    }

    &__image {
        width: 100%;
    }
}

